// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _accessKey="V" 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            V
          </span>
        </span>
      </label>
      <div class="input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input accesskey="V" aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _alert=true 1`] = `
<kol-input-range _alert="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _disabled=true 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="disabled kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" disabled="" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" disabled="" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _hint="Hint" 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <span class="hint" id="id-nonce-hint">
        Hint
      </span>
      <div class="input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-describedby="id-nonce-hint" aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input aria-describedby="id-nonce-hint" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="icon-left icon-right input">
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label="" _tabindex="-1"></kol-icon>
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
        </div>
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label="" _tabindex="-1"></kol-icon>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="icon-left input">
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label="" _tabindex="-1"></kol-icon>
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="icon-right input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
        </div>
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label="" _tabindex="-1"></kol-icon>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input-range _hide-error="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="hidden-error kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _readOnly=true 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" _readonly="">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _shortKey="S" 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            S
          </span>
        </span>
      </label>
      <div class="input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _accessKey="V" 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            V
          </span>
        </span>
      </label>
      <div class="input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input accesskey="V" aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
          <datalist id="id-nonce-list">
            <option value="1"></option>
            <option value="2"></option>
            <option value="3"></option>
            <option value="4"></option>
            <option value="5"></option>
            <option value="6"></option>
            <option value="7"></option>
            <option value="8"></option>
            <option value="9"></option>
            <option value="10"></option>
          </datalist>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _alert=true 1`] = `
<kol-input-range _alert="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
          <datalist id="id-nonce-list">
            <option value="1"></option>
            <option value="2"></option>
            <option value="3"></option>
            <option value="4"></option>
            <option value="5"></option>
            <option value="6"></option>
            <option value="7"></option>
            <option value="8"></option>
            <option value="9"></option>
            <option value="10"></option>
          </datalist>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _disabled=true 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="disabled kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" disabled="" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" disabled="" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
          <datalist id="id-nonce-list">
            <option value="1"></option>
            <option value="2"></option>
            <option value="3"></option>
            <option value="4"></option>
            <option value="5"></option>
            <option value="6"></option>
            <option value="7"></option>
            <option value="8"></option>
            <option value="9"></option>
            <option value="10"></option>
          </datalist>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _hint="Hint" 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <span class="hint" id="id-nonce-hint">
        Hint
      </span>
      <div class="input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-describedby="id-nonce-hint" aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input aria-describedby="id-nonce-hint" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
          <datalist id="id-nonce-list">
            <option value="1"></option>
            <option value="2"></option>
            <option value="3"></option>
            <option value="4"></option>
            <option value="5"></option>
            <option value="6"></option>
            <option value="7"></option>
            <option value="8"></option>
            <option value="9"></option>
            <option value="10"></option>
          </datalist>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="icon-left icon-right input">
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label="" _tabindex="-1"></kol-icon>
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
          <datalist id="id-nonce-list">
            <option value="1"></option>
            <option value="2"></option>
            <option value="3"></option>
            <option value="4"></option>
            <option value="5"></option>
            <option value="6"></option>
            <option value="7"></option>
            <option value="8"></option>
            <option value="9"></option>
            <option value="10"></option>
          </datalist>
        </div>
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label="" _tabindex="-1"></kol-icon>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="icon-left input">
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label="" _tabindex="-1"></kol-icon>
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
          <datalist id="id-nonce-list">
            <option value="1"></option>
            <option value="2"></option>
            <option value="3"></option>
            <option value="4"></option>
            <option value="5"></option>
            <option value="6"></option>
            <option value="7"></option>
            <option value="8"></option>
            <option value="9"></option>
            <option value="10"></option>
          </datalist>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="icon-right input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
          <datalist id="id-nonce-list">
            <option value="1"></option>
            <option value="2"></option>
            <option value="3"></option>
            <option value="4"></option>
            <option value="5"></option>
            <option value="6"></option>
            <option value="7"></option>
            <option value="8"></option>
            <option value="9"></option>
            <option value="10"></option>
          </datalist>
        </div>
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label="" _tabindex="-1"></kol-icon>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input-range _hide-error="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="hidden-error kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
          <datalist id="id-nonce-list">
            <option value="1"></option>
            <option value="2"></option>
            <option value="3"></option>
            <option value="4"></option>
            <option value="5"></option>
            <option value="6"></option>
            <option value="7"></option>
            <option value="8"></option>
            <option value="9"></option>
            <option value="10"></option>
          </datalist>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
          <datalist id="id-nonce-list">
            <option value="1"></option>
            <option value="2"></option>
            <option value="3"></option>
            <option value="4"></option>
            <option value="5"></option>
            <option value="6"></option>
            <option value="7"></option>
            <option value="8"></option>
            <option value="9"></option>
            <option value="10"></option>
          </datalist>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _readOnly=true 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" _readonly="">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
          <datalist id="id-nonce-list">
            <option value="1"></option>
            <option value="2"></option>
            <option value="3"></option>
            <option value="4"></option>
            <option value="5"></option>
            <option value="6"></option>
            <option value="7"></option>
            <option value="8"></option>
            <option value="9"></option>
            <option value="10"></option>
          </datalist>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _shortKey="S" 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            S
          </span>
        </span>
      </label>
      <div class="input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
          <datalist id="id-nonce-list">
            <option value="1"></option>
            <option value="2"></option>
            <option value="3"></option>
            <option value="4"></option>
            <option value="5"></option>
            <option value="6"></option>
            <option value="7"></option>
            <option value="8"></option>
            <option value="9"></option>
            <option value="10"></option>
          </datalist>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] _touched=true 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" _touched="">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range touched" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
          <datalist id="id-nonce-list">
            <option value="1"></option>
            <option value="2"></option>
            <option value="3"></option>
            <option value="4"></option>
            <option value="5"></option>
            <option value="6"></option>
            <option value="7"></option>
            <option value="8"></option>
            <option value="9"></option>
            <option value="10"></option>
          </datalist>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _suggestions=[1,2,3,4,5,6,7,8,9,10] 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" list="id-nonce-list" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" list="id-nonce-list" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
          <datalist id="id-nonce-list">
            <option value="1"></option>
            <option value="2"></option>
            <option value="3"></option>
            <option value="4"></option>
            <option value="5"></option>
            <option value="6"></option>
            <option value="7"></option>
            <option value="8"></option>
            <option value="9"></option>
            <option value="10"></option>
          </datalist>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 _touched=true 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext" _touched="">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range touched" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;

exports[`kol-input-range should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value=5 _min=1 _max=10 _step=1 1`] = `
<kol-input-range _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-input kol-input-range msg-type-error range" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="input-slot" id="input">
          <div class="inputs-wrapper" style="--kolibri-input-range--input-number--width: 2.5em;">
            <input aria-hidden="true" autocapitalize="off" autocomplete="off" autocorrect="off" max="10" min="1" name="field-range" step="1" tabindex="-1" type="range" value="5">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="10" min="1" name="field-number" step="1" type="number" value="5">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-range>
`;
